[package]
name = "ghv"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["clock", "serde"] }
clap = { version = "4.5.18", features = ["derive", "env"] }
color-eyre = "0.6.3"
dotenvy = { version = "0.15.7", features = ["clap"] }
octocrab = "0.40.0"
regorus = "0.2.5"
# Required for compat between octocrab
secrecy = "0.8.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
walkdir = "2.5.0"
